@@ -1,3 +1,7 @@
+2006-04-23  Don Allingham  <don@gramps-project.org>
+	* src/GrampsCfg.py: remove familyview stuff
+	* src/plugins/TestcaseGenerator.py: fix BIRTH, DEATH constants
+
 2006-04-23  Alex Roitman  <shura@gramps-project.org>
 	* src/PluginUtils/_PluginStatus.py (PluginTrace.__init__): Set
 	scrolling policy to auto;
